--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -5,17 +5,17 @@ name: Cloud Run Continuous Deployment
 on:
   push:
     # TODO: change 'none' to 'main' to enable the workflow to run
-    branches: 'none'
+    branches: 'main'
   release:
     types: [published]
 
 env:
   # TODO: Paste output from setup.sh below.
-  PROJECT_ID: ''
-  SERVICE_NAME: ''
-  SERVICE_REGION: ''
-  SERVICE_ACCOUNT: ''
-  WORKLOAD_IDENTITY_PROVIDER: ''
+  PROJECT_ID: 'carlos-negron-uprm'
+  SERVICE_NAME: 'group-6'
+  SERVICE_REGION: 'us-central1'
+  SERVICE_ACCOUNT: '160020656693-compute@developer.gserviceaccount.com'
+  WORKLOAD_IDENTITY_PROVIDER: 'projects/160020656693/locations/global/workloadIdentityPools/github-provider/providers/github-project-repo'
 
 jobs:
   py-checks:
